feat: add cancel order api and implement fraud detection feature with redis
